# TankHero

./: CMakeLists.txt  LICENSE.txt  emscripten.cmd  index.html  windeployqt.bat
OSX/: index.html
Web/: index.asm.js  index.html.mem  index.js  play.html
Windows/: index.html
_distrib/: TankHero-OSX.txt  TankHero-WebGL.txt  TankHero-Windows.txt
_distrib/WebGL/: index.html
cmake/: bin2c.cmake  common.cmake
cmake/cotire/CMake/: cotire.cmake
data/icon/: icon.icns  icon.icpr
data/src/: S31-Grime of the City.txt  S31-Unexpected Trouble.txt  button.psd  copyright.psd  crate_medkit.psd  end_title.psd  enemies_left.psd  help_screen.psd  logo.psd  lose_title.psd  number.psd  pause_button.psd  pause_title.psd  small_logo.psd  win_title.psd
data/src/SoundPack01/: readme.txt
data/src/TankAndProps/: readme.txt
data/src/TankAndProps/Tanks/: Body.xml  Bullet.xml  Gun.xml
data/src/concrete-barriers/cube/: cube.xml
data/src/concrete-barriers/wall/: wall.xml
data/src/crate_model/: License Information.txt  crate_medkit.xml  readme.txt
data/src/explosion-sound/: readme.txt
data/src/explosions/: explosion1.psd  readme.txt
data/src/green-tank/: readme.txt
data/src/gunloop-8bit/: readme.txt
data/src/heart/: readme.txt
data/src/keyboard_keys/: readme.txt
data/src/landscape_asset_v2a/: readme.txt
data/src/lowpoly-tree/: readme.txt  tree.3ds  tree.xml
data/src/panzerwagen/: license  panzerwagen.xml  panzerwagen_3x3.blend  panzerwagen_3x3.g3d
lib/assimp/: CMakeLists.txt  pch.hpp
lib/assimp/src/code/: DefaultIOStream.cpp
lib/assimp/src/include/assimp/: defs.h
lib/glm/: CMakeLists.txt
lib/miniball/: CMakeLists.txt
lib/stb/: CMakeLists.txt
lib/tinyxml/: CMakeLists.txt
lib/zlib/: CMakeLists.txt
src/engine/: Engine.cpp  Engine.h  Game.h
src/engine/math/: OBB2D.cpp  OBB2D.h
src/engine/mesh/: MaterialDesc.h  Mesh.h  MeshFile.h  VertexData.cpp  VertexData.h  VertexFormat.cpp  VertexFormat.h
src/engine/platform/emscripten/: index.html  main.cpp
src/engine/platform/qt/: MainWindow.cpp  OpenGLWidget.cpp  OpenGLWidget.h  main.cpp
src/engine/render/: Canvas.cpp  Canvas.h  Renderer.cpp  Renderer.h
src/engine/render/opengles2/: GLES2Buffer.cpp  GLES2Buffer.h  GLES2Framebuffer.cpp  GLES2Framebuffer.h  GLES2Mesh.cpp  GLES2Mesh.h  GLES2Renderbuffer.cpp  GLES2Renderbuffer.h  GLES2Renderer.cpp  GLES2Renderer.h  GLES2Shader2D.cpp  GLES2Shader2D.h  GLES2Shader2D_Fragment.glsl  GLES2Shader2D_Vertex.glsl  GLES2ShaderProgram.cpp  GLES2ShaderProgram.h  GLES2Texture.cpp  GLES2Texture.h  GLES2UberShader.cpp  GLES2UberShader.h  GLES2UberShader_Fragment.glsl  GLES2UberShader_Vertex.glsl  OpenGL.h
src/engine/scene/: Button.cpp  Button.h  Node.cpp  Node.h  RootNode.cpp  RootNode.h  Scene.cpp  Scene.h
src/engine/scene/camera/: Camera.h  OrthoCamera.cpp  OrthoCamera.h  PerspectiveCamera.h
src/engine/sound/: SoundManager.cpp  SoundManager.h
src/engine/sound/dummy/: DummySoundManager.cpp  DummySoundManager.h
src/engine/sound/openal/: OpenAL.h  OpenALSound.cpp  OpenALSound.h  OpenALSoundManager.cpp  OpenALSoundManager.h
src/engine/utility/: StbImage.cpp  StbImage.h  StbVorbis.cpp  StbVorbis.h  TarGzDecompressor.cpp  TarGzDecompressor.h
src/game/: Game.cpp  Game.h  main.cpp
src/game/game/: Bullet.cpp  Bullet.h  Collidable.cpp  Collidable.h  Enemy.cpp  Enemy.h  Explosion.cpp  Explosion.h  GameScene.cpp  GameScene.h  Hud.cpp  Hud.h  InvisibleObstacle.cpp  InvisibleObstacle.h  Level.cpp  Level.h  LoseScene.cpp  LoseScene.h  MedKit.cpp  MedKit.h  Obstacle.cpp  Obstacle.h  PauseScene.cpp  PauseScene.h  Player.cpp  Player.h  Tree.cpp  Tree.h  WinScene.cpp  WinScene.h
src/game/menu/: GameLoadingScene.cpp  GameLoadingScene.h  HelpScene.cpp  HelpScene.h  InitialLoadingScene.cpp  InitialLoadingScene.h  LoadingScene.cpp  LoadingScene.h  MainMenuScene.cpp  MainMenuScene.h  MenuLoadingScene.cpp  MenuLoadingScene.h
src/mesh/: VertexFormat.h
src/platform/qt/: MainWindow.cpp  MainWindow.h
tools/: CMakeLists.txt
tools/mesh2bin/: CMakeLists.txt  mesh2bin.cpp
tools/packsprites/: CMakeLists.txt  packsprites.cpp
